c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_semantics/extra_credit/compound_invalid_lvalue_2.c
int main(void) {
    int a = 10;
    (a += 1) -= 2;
}